# drawio-svg-library

./: LICENSE.txt  README.md  pyproject.toml
src/drawio_svg_library/: __about__.py  __init__.py  cli.py  core.py
