[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drawio-svg-library"
description = 'Generate draw.io libraries from SVGs'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Lukas Patzke", email = "lukas@patzke.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["typer[all]~=0.7"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/LukasPatzke/drawio-svg-library#readme"
Issues = "https://github.com/LukasPatzke/drawio-svg-library/issues"
Source = "https://github.com/LukasPatzke/drawio-svg-library"

[project.scripts]
drawio-svg-library = "drawio_svg_library.cli:app"

[tool.hatch.version]
path = "src/drawio_svg_library/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/drawio_svg_library --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/drawio_svg_library/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
